# plugins-multistage

./: .travis.yml  LICENSE  README.md  feldspar-plugin.cabal  plugins-multistage.cabal  sources.txt
Feldspar/: Plugin.hs
Feldspar/Plugin/: Generic.hs  Marshal.hs  Utils.hs
bench/: Benchmark.hs
src/: runtime.c
src/Feldspar/: Plugin.hs
src/Feldspar/Compiler/: CallConv.hs  Marshal.hs  Plugin.hs
src/Feldspar/Plugin/: Generic.hs  Marshal.hs  TypeRewrite.hs  Utils.hs
src/Foreign/Marshal/: Class.hs  Feldspar.hs
src/Language/Haskell/TH/: TypeRewrite.hs
src/System/Plugins/: MultiStage.hs
tests/: RegressionTests.hs  prog0.c  prog0_suf.c
