name:           feldspar-plugin
version:        0.2
synopsis:       Dynamicaly load a compiled Feldspar program as a Haskell function
description:    Feldspar (http://feldspar.github.com) is an embedded DSL
                for describing digital signal processing algorithms.

                This package contains a framework that enables loading compiled Feldspar
                programs back into GHC
category:       Language
copyright:      Copyright (c) 2012, Anders Persson
author:         Anders Persson <anders.cj.persson@gmail.com>
maintainer:     Anders Persson <anders.cj.persson@gmail.com>
license:        BSD3
license-file:   LICENSE
stability:      experimental
build-type:     Simple
cabal-version:  >= 1.14
tested-with:    GHC==7.6

source-repository head
    type: git
    location: https://github.com/emwap/feldspar-plugin

library
  default-language: Haskell2010

  exposed-modules:
    Feldspar.Plugin
    Feldspar.Plugin.Generic
    Feldspar.Plugin.Marshal
    Feldspar.Plugin.Utils

  build-depends: base              >= 4     && < 4.7
               , plugins           >= 1.5.3 && < 2
               , process           >= 1.0   && < 1.2
               , directory         >= 1.1   && < 1.3
               , template-haskell  >= 2.5   && < 2.9
               , th-expand-syns    >= 0.3
               , storable-record               < 0.1
               , storable-tuple                < 0.1
               , syntactic         >= 1.6   && < 1.8
               , feldspar-language >= 0.6.1
               , feldspar-compiler >= 0.6.1

  hs-source-dirs: src

  c-sources: src/runtime.c

  if os(linux)
    extra-libraries: gcc_s

  ghc-options: -fcontext-stack=100

test-suite regression
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: RegressionTests.hs

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    feldspar-compiler,
    feldspar-plugin,
    base,
    tasty            >= 0.2 && < 0.3,
    tasty-th         >= 0.1 && < 0.2,
    tasty-quickcheck >= 0.2 && < 0.3,
    QuickCheck       >= 2.5 && < 3.0

